# -

./: README.md
00-thirdparty/centos7/curl/include/curl/: curl.h
00-thirdparty/centos7/faceall/include/: faceall_common.h  faceall_sdk.h
00-thirdparty/centos7/faceall/lib/: libboost_system.so.1.59.0  libboost_thread.so.1.59.0  libglog.so.0
00-thirdparty/centos7/hcnet/include/: HCNetSDK.h
00-thirdparty/centos7/log4cpp/include/log4cpp/threading/: Makefile
00-thirdparty/centos7/opencv/lib/: libopencv_core.so.2.4  libopencv_highgui.so.2.4  libopencv_imgproc.so.2.4
00-thirdparty/centos7/seeta/include/: VIPLCFaceDetector.h  VIPLCFaceRecognizer.h  VIPLCPointDetector.h  VIPLCStruct.h  VIPLFaceDetector.h  VIPLFaceRecognizer.h  VIPLMPointDetector.h  VIPLMoreStruct.h  VIPLPointDetector.h  VIPLQualityAssessment.h  VIPLVideoFaceTracker.h
00-thirdparty/centos7/seeta/lib/: libgfortran.so.3  libprotobuf.so.9  libquadmath.so.0
00-thirdparty/centos7/seeta/tools/: readme.txt  seetagether  seetaverify  授权证书使用说明.txt  授权辅助工具使用说明.txt
00-thirdparty/centos7/sqlite/lib/: libsqlite3.so.0.8.6
01-source/common/: ConsumerImpl.cpp  ConsumerImpl.h  GetoptWin.cpp  GetoptWin.h  Lock.cpp  Lock.h  Log.h  Logger.cpp  Logger.h  ProducerImpl.cpp  ProducerImpl.h  ProducerMgr.cpp  ProducerMgr.h  Properites.cpp  Properties.h
01-source/utils/: Base64Util.cpp  Base64Util.h  ConvertCharCode.cpp  ConvertCharCode.h  Dlopen.cpp  Dlopen.h  FileUtil.cpp  FileUtil.h  GuidUtil.cpp  GuidUtil.h  HttpUtil.cpp  HttpUtil.h  ImageUtil.cpp  ImageUtil.h  StringUtil.cpp  StringUtil.h  TimeUtil.cpp  TimeUtil.h
02-CollectSerivce/: start.sh
02-CollectSerivce/cmake/: CMakeLists.txt  config.h.in
02-CollectSerivce/conf/: collectservice.property  log4cpp.property
02-CollectSerivce/src/: AnalyseService.cpp  AnalyseService.h  AnalyseStruct.cpp  AnalyseStruct.h  BaseMsgHandler.cpp  BaseMsgHandler.h  CameraTask.cpp  CameraTask.h  CodeStatus.cpp  CodeStatus.h  Faceall.cpp  Faceall.h  HkCamera.cpp  HkCamera.h  HttpMsg.h  LtsJobClient.cpp  LtsJobClient.h  Media.cpp  Media.h  PropertyConfigurator.cpp  PropertyConfigurator.h  TaskInfo.h  TaskMgr.cpp  TaskMgr.h  config.h  main.cpp
03-FaceSearchService/: start.sh
03-FaceSearchService/cmake/: CMakeLists.txt  config.h.in
03-FaceSearchService/conf/: facesearchservice.property  log4cpp.property
03-FaceSearchService/src/: BaseMsgHandler.cpp  BaseMsgHandler.h  CodeStatus.cpp  CodeStatus.h  FaceAllIdentify.cpp  FaceAllIdentify.h  FaceDataConsumerCb.cpp  FaceDataConsumerCb.h  FaceIdentify.cpp  FaceIdentify.h  FaceSearchHandler.cpp  FaceSearchHandler.h  HttpMsg.h  HttpServer.cpp  HttpServer.h  PropertyConfigurator.cpp  PropertyConfigurator.h  SqliteFaceCache.cpp  SqliteFaceCache.h  TimerThread.cpp  TimerThread.h  config.h  main.cpp
04-CompareService/: start.sh
04-CompareService/cmake/: CMakeLists.txt
04-CompareService/conf/: compareservice.property  log4cpp.property
04-CompareService/src/: CompareConsumer.cpp  CompareConsumer.h  DataCache.cpp  DataCache.h  FaceEngine.cpp  FaceEngine.h  HttpService.cpp  HttpService.h  PropertyConfigurator.cpp  PropertyConfigurator.h  main.cpp
